security: restrict Docker port exposure to nginx only
Remove host port bindings from all internal services (PostgreSQL, Redis,
Qdrant, embedding-service, intent-service, api-gateway, pdf-service,
frontend). Only the nginx reverse proxy exposes port 80 to the host.
Internal services continue communicating via Docker DNS on the private
academick-network bridge.

Also update NEXT_PUBLIC_API_URL default from localhost:8000 to localhost
so the frontend routes through nginx, and set client_max_body_size to
500m to support PDF and snapshot uploads through the proxy.

--- a/.env.example
+++ b/.env.example
@@ -147,9 +147,9 @@ EMBEDDING_BATCH_SIZE=16
 # Frontend Configuration
 # ===========================================
 # API Gateway URL (used by Next.js frontend at build time)
-# For Docker: http://localhost:8000
-# For production behind nginx: http://your-domain.com
-NEXT_PUBLIC_API_URL=http://localhost:8000
+# For Docker: http://localhost (through nginx reverse proxy)
+# For production: http://your-domain.com
+NEXT_PUBLIC_API_URL=http://localhost
 
 # Default subject displayed in the frontend (should match DEFAULT_SUBJECT)
 NEXT_PUBLIC_DEFAULT_SUBJECT=Machine Learning
@@ -173,6 +173,11 @@ NEXT_PUBLIC_DEFAULT_SUBJECT=Machine Learning
 # ⚠️  Changing these values incorrectly can break the system.
 # ⚠️  Most users should leave these at their defaults.
 # ===========================================
+
+# --- Nginx Advanced ---
+# Maximum upload size for file uploads (PDFs, snapshots)
+# ⚠️ WARNING: Set in config/nginx.conf (client_max_body_size), not here. Requires container restart
+# NGINX_MAX_BODY_SIZE=500m
 
 # --- Redis Advanced ---
 # Maximum memory allocation (512mb recommended for production)
