--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -48,6 +48,9 @@ http {
         listen 80;
         server_name localhost;
 
+        # Allow large file uploads (PDFs, snapshots)
+        client_max_body_size 500m;
+
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
