security: remove hardcoded credential fallbacks from docker-compose
Replace ${VAR:-default} with ${VAR:?error} for all security-sensitive
environment variables (POSTGRES_PASSWORD, REDIS_PASSWORD, SESSION_SECRET,
ADMIN_PASSWORD, GUEST_PASSWORD). Docker compose now fails fast with a
clear error if credentials are not explicitly set in .env.

Also clear default credential values from .env.example so that copying
it without setting real passwords will trigger the same fail-fast errors.

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@
 #
 # QUICK START:
 # 1. Set at least one LLM API key (OPENAI_API_KEY, ANTHROPIC_API_KEY, or DEEPSEEK_API_KEY)
-# 2. Change SESSION_SECRET to a secure random string
-# 3. Update passwords if deploying to production
+# 2. Set all required passwords (POSTGRES_PASSWORD, REDIS_PASSWORD, SESSION_SECRET,
+#    ADMIN_PASSWORD, GUEST_PASSWORD) - the system will not start without them
 #
 # CONFIGURATION NOTES:
 # - Commented variables (#) show optional settings with defaults
@@ -20,7 +20,7 @@
 # ===========================================
 # Database connection credentials
 POSTGRES_USER=academick
-POSTGRES_PASSWORD=academick_secure_password
+POSTGRES_PASSWORD=
 POSTGRES_DB=academick
 
 # Full connection string (automatically constructed from above)
@@ -32,7 +32,7 @@ POSTGRES_DB=academick
 # ===========================================
 # Redis authentication password
 # IMPORTANT: Change this to a secure random password in production!
-REDIS_PASSWORD=change_this_redis_password
+REDIS_PASSWORD=
 
 # Redis connection URL for session caching and Celery task queue
 # Used by: api-gateway, pdf-service, pdf-worker
@@ -107,7 +107,7 @@ DEFAULT_SUBJECT=Machine Learning
 SESSION_TTL_MINUTES=30
 # Secret key for session token encryption
 # IMPORTANT: Change this to a secure random string in production!
-SESSION_SECRET=change_this_to_a_secure_random_string
+SESSION_SECRET=
 
 # ===========================================
 # Config Users (Testing)
@@ -116,9 +116,9 @@ SESSION_SECRET=change_this_to_a_secure_random_string
 # IMPORTANT: Set to false in production for security
 CONFIG_USERS_ENABLED=true
 # Admin user password (username: admin)
-ADMIN_PASSWORD=admin_secure_password
+ADMIN_PASSWORD=
 # Guest user password (username: guest)
-GUEST_PASSWORD=guest_password
+GUEST_PASSWORD=
 
 # ===========================================
 # Admin Dashboard Features
