fix: harden PDF upload validation and fix job dismissal 405 error
Add server-side PDF upload validation:
- File extension check (case-insensitive .pdf)
- File size limit via MAX_UPLOAD_SIZE_MB (default 100MB)
- MIME type validation using python-magic/libmagic
- Add python-magic dependency and libmagic1 system package
- Add MAX_UPLOAD_SIZE_MB to .env.example advanced config

Fix frontend job dismissal crash when dismissing failed uploads
that never reached the backend (empty job_id caused 405 Method
Not Allowed). Frontend-only error jobs are now removed from
local state directly by matching filename.

--- a/.env.example
+++ b/.env.example
@@ -245,6 +245,10 @@ NEXT_PUBLIC_DEFAULT_SUBJECT=Machine Learning
 # INTENT_DEVICE=cpu
 
 # --- PDF Processing Service Advanced ---
+# Maximum PDF upload file size in megabytes
+# Default: 100 (100MB)
+# MAX_UPLOAD_SIZE_MB=100
+
 # Text chunk size in characters (affects retrieval granularity)
 # WARNING: Changing this requires re-processing all PDFs
 # Default: 3000 chars (~600 words)
