feat: make LLM max_tokens configurable via LLM_MAX_TOKENS env var

--- a/.env.example
+++ b/.env.example
@@ -91,6 +91,10 @@ DEEPSEEK_API_KEY=
 # This should be a fast, cheap model since it runs on every query before the main LLM
 # QUERY_ENHANCEMENT_MODEL=gpt-5-nano
 
+# Maximum completion tokens for LLM responses (includes reasoning + output)
+# Increase if using reasoning models (e.g., gpt-5-nano) that consume tokens for thinking
+# LLM_MAX_TOKENS=16384
+
 # ===========================================
 # Project Subject Configuration
 # ===========================================
